tests/ui/error/builder_does_not_support_enums.rs
#[derive(tidy_builder::Builder)]
enum MyEnum {
    A,
    B,
}

fn main() {}